# PG2_Practica7

./: README.es.md  README.md  TEMPLATES_GUIDE.md  example_buttons.py  pyproject.toml  requirements.txt  setup.cfg
PyGameRules/: pyproject.toml  setup.py
PyGameRules/src/pygame_rules/: __init__.py  counters.py  states.py  timers.py  types.py
PyGameRules/tests/: test_counters.py  test_states.py  test_timers.py
examples/: example_buttons.py  example_complete_showcase.py  example_demo_1.py  example_demo_2.py  out.py  solid.py
pygame_ui_items/: __init__.py  button.py  button_factory.py  event_queue.py  modal.py  ui_element.py  ui_manager.py  window_stack.py
src/pygame_ui_items/core/: ui_element.py  ui_manager.py
src/pygame_ui_items/elements/: button.py  button_factory.py
src/pygame_ui_items/styles/: __init__.py  presents.py  themes.py
src/pygame_ui_items/utils/: __init__.py  animations.py  helpers.py
tests/: test_button.py  test_button_factory.py  test_buttons.py  test_event_queue.py  test_themes.py  test_window_stack.py
