[metadata]
name = pygame_ui_items
version = 0.1.0
author = AdanCR1
author_email = adancortez.sis.24ch@tecba.edu.bo
description = Creation of UI components in a simplified way and using a CSS-like syntax
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdanCR1/pygame_ui_items
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pygame >= 2.0.0

[options.packages.find]
where = src