[tool.poetry]
name = "pygame_rules"
version = "0.1.0"
description = "A library for managing counters, timers, and game states compatible with Pygame."
authors = ["AdanCR1 <your_email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/PyGameRules"
repository = "https://github.com/yourusername/PyGameRules"
keywords = ["pygame", "game", "counters", "timers", "states"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"